<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.sidemenu.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="16dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/logo_teman_tidur"
                android:src="@drawable/icon_app" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/travel_journal"
                    android:text="@string/teman_tidur"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/travel_journal"
                    android:text="@string/teman_tidur_tagline"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <TextView
                android:id="@+id/tv_title_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/about_us"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_desc_bout_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/about_us_desc"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_title_people_behind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/people_behind"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ly_people_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/nav_profile_1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:contentDescription="@string/github_profile_of_person_1"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_github"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/people_1"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_people_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/nav_profile_2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:contentDescription="@string/github_profile_of_person_2"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_github"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/people_2"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_people_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/nav_profile_3"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:contentDescription="@string/github_profile_of_person_3"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_github"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/people_3"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/app_version"
                android:textAlignment="center"
                android:textColor="#AAAAAA"
                android:textSize="10sp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>