<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_rounded"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp">

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="73dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="9dp"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="74dp"
            android:contentDescription="@string/confirmation_icon_description"
            android:src="@drawable/ic_question_mark" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/confirmation_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/confirmation_message"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/darkblue"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="12dp" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="12dp" />
    </LinearLayout>

</LinearLayout>