<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/change_email_title"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_current_email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/current_email_form"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_current_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/darkblue"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_current_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/current_email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/darkblue"
            android:textColorHint="@color/darkblue"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_new_email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/new_email_form"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/darkblue"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/darkblue"
            android:textColorHint="@color/darkblue"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_current_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/current_password_form"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="custom"
        app:endIconTint="@color/darkblue"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_pass"
        app:startIconTint="@color/darkblue"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@android:color/transparent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/current_password_hint"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/darkblue"
            android:textColorHint="@color/darkblue"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_change_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/darkblue"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/cancel_button"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </LinearLayout>

</LinearLayout>